# rust-sandbox

./: .gitignore
collections/src/: main.rs
foundations/: Cargo.toml
foundations/session1/authentication/: Cargo.toml
foundations/session1/authentication/src/: lib.rs
foundations/session1/login/: Cargo.toml
foundations/session1/login/src/: main.rs
foundations/session1/login_manager/: Cargo.toml  users.json
foundations/session1/login_manager/src/: main.rs
foundations/session1/variables/src/: main.rs
foundations/session2/affinity/src/: main.rs
foundations/session2/channels1/src/: main.rs
foundations/session2/dashing/src/: main.rs
foundations/session2/deadlocks/src/: main.rs
foundations/session2/divide_work/src/: main.rs
foundations/session2/footgun/src/: main.rs
foundations/session2/hello/src/: main.rs
foundations/session2/mutexes/src/: main.rs
foundations/session2/parking-threads/: Cargo.toml
foundations/session2/parking-threads/src/: main.rs
foundations/session2/rayon_iters/src/: main.rs
foundations/session2/rayon_scopes/src/: main.rs
foundations/session2/rwlocks/src/: main.rs
foundations/session2/scoped_threads/src/: main.rs
foundations/session2/thread_builder/src/: main.rs
foundations/session2/tprio_thread_priority/: Cargo.toml
foundations/session2/tprio_thread_priority/src/: main.rs
foundations/session2/workers/src/: main.rs
foundations/session2/workers2/src/: main.rs
labs/traits/: Cargo.toml  README.md
labs/traits/src/: asref.rs  complex_example.rs  display_trait.rs  from_trait.rs  main.rs  orphan_rule.rs
(+28 files in other folders)
