[package]
name = "traits"
version = "0.1.0"
edition = "2024"
default-run = "traits"

[[bin]]
name = "display"
path = "src/display_trait.rs"

[[bin]]
name = "complex"
path = "src/complex_example.rs"

[[bin]]
name = "from"
path = "src/from_trait.rs"

[[bin]]
name = "orphan"
path = "src/orphan_rule.rs"

[dependencies]
